# monolith

./: .gitignore  CMakeLists.txt  README.md
cmake/: CheckGit.cmake  FindCppuTest.cmake
configs/: standard.toml  test_pycrate.toml  weather_station.toml
rules/: default.lua  demu.lua  pycrate.lua  weather_station.lua
src/: heartbeats.cpp  heartbeats.hpp  host_info.cpp  host_info.hpp  main.cpp  version.cpp  version.hpp
src/alert/: alert.cpp  alert.hpp
src/alert/sms/twilio/: twilio.cpp  twilio.hpp
src/alert/smtp/: README.md
src/db/: kv.cpp  kv.hpp  metric_db.cpp  metric_db.hpp
src/interfaces/: reloadable_if.hpp  service_if.hpp  sms_backend_if.hpp
src/networking/: types.hpp
src/portal/: portal.cpp  portal.hpp
src/services/: action_dispatch.cpp  action_dispatch.hpp  app.cpp  app.hpp  data_submission.cpp  data_submission.hpp  metric_db.cpp  metric_db.hpp  metric_streamer.cpp  metric_streamer.hpp  registrar.cpp  registrar.hpp  rule_executor.cpp  rule_executor.hpp  telnet.cpp  telnet.hpp
static/: index.html  portal.css
tests/: CMakeLists.txt  sensor_registrar_test.cpp  server_tests.cpp  streaming_tests.cpp
